# AirportManager

./: CMakeLists.txt  readme.md
src/: Aircraft.cpp  Aircraft.h  AircraftOnFly.cpp  AircraftOnFly.h  AircraftOnParking.cpp  AircraftOnParking.h  Airport.cpp  Airport.h  AirportManager.cpp  AirportManager.h  Dispatcher.cpp  Dispatcher.h  Pilot.cpp  Pilot.h  Worker.cpp  Worker.h  main.cpp
